# cookiecutter-python-package

./: .gitignore  CONTRIBUTING.rst  README.rst  cookiecutter.json  requirements_dev.txt
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  dev-requirements.in  mypy.ini  setup.cfg  setup.py  setup_py2.py
{{cookiecutter.project_name}}/docs/: Makefile  conf.py  index.rst  usage.rst
{{cookiecutter.project_name}}/scripts/: {{cookiecutter.project_name}}
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: exceptions.py  management.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  MANIFEST.in  common-requirements.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.project_slug}}/scripts/: {{cookiecutter.project_name}}
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: exceptions.py
