[metadata]
name = {{ cookiecutter.project_name }}
# version = {version}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author-email = {{ cookiecutter.email }}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/
download_url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/archive/master.zip
description = {{ cookiecutter.project_short_description }}
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
keywords = {{ cookiecutter.project_name }}

[options]
zip_safe = false
include_package_data = true

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = true
restructuredtext = true
strict = true

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[flake8]
exclude = docs

[aliases]

# Define setup.py command aliases here
