[metadata]
name = {{ cookiecutter.project_name }}
version = attr: {{ cookiecutter.project_slug }}.__version__
description = {{ cookiecutter.project_short_description }}
long-description = file: README.rst
keywords = {{ cookiecutter.project_name }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author-email = {{ cookiecutter.email }}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/
download_url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/archive/master.zip
license = {{ cookiecutter.open_source_license }}
license-file = LICENSE
platform = any
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: POSIX :: BSD
    {%- if cookiecutter.open_source_license == 'MIT license' %}License :: OSI Approved :: MIT License{%- endif %}
    {%- if cookiecutter.open_source_license == 'BSD license' %}License :: OSI Approved :: BSD License{%- endif %}
    {%- if cookiecutter.open_source_license == 'ISC license' %}License :: OSI Approved :: ISC License (ISCL){%- endif %}
    {%- if cookiecutter.open_source_license == 'Apache Software License 2.0' %}License :: OSI Approved :: Apache Software License{%- endif %}
    {%- if cookiecutter.open_source_license == 'GNU General Public License v3' %}License :: OSI Approved :: GNU General Public License v3 (GPLv3){%- endif %}
    Natural Language :: English

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
{%- if cookiecutter.command_line_interface|lower == 'click' %}    click>=6.0{%- endif %}
{%- if cookiecutter.command_line_interface|lower == 'click' %}
[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.management:manage{%- endif %}

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[flake8]
exclude = docs

[aliases]

# Define setup.py command aliases here
